fixed bug 55993 -- forward attachment corrupt; r=ducarroz, sr=mscott